<resources>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Jelszó</string>
    <string name="invalid_username">Helytelen felhasználónév</string>
    <string name="invalid_password">Helytelen jelszó!</string>
    <string name="login_failed">Sikertelen bejelentkezés</string>
    <string name="login">Bejelentkezés</string>
    <string name="username">Oktatási azonsoító</string>
    <string name="education_ID_hint">11 számjegyű kód a diákigazolványodon</string>
    <string name="made_by" translatable="false">Norbert©</string>
    <string name="or">Vagy</string>
    <string name="touch_nfc">Közelítsd az NFC bilétád</string>
    <string name="please_login">Kérlek jelentkezz be a folytatáshoz</string>
    <string name="action_sign_in_short">Temp</string>
    <string name="action_sign_in">Temp</string>
    <string name="hello_blank_fragment">Helló üres fragment</string>
    <string-array name="languages">
        <item>Magyar</item>
        <item>Angol</item>
    </string-array>
    <string name="mode">Mód</string>
    <string-array name="floors">
        <item>Földszint</item>
        <item>1. Emelet</item>
        <item>Lorem</item>
        <item>2. Emelet</item>
    </string-array>
    <string name="language">Nyelv</string>
    <string name="logout">Kijelentkezés</string>
    <string name="general">Általános</string>
    <string name="notifications">Értesítések</string>
    <string name="all">Összes</string>
    <string name="arrival_reminder">Beérkezés emlékeztető</string>
    <string name="arrival_reminder_description">Értesítés a kimenő végétől visszaszámított utolsó egy és fél órában, abban az esetben, ha kint vagy</string>
    <string name="occupation_reminder">Foglalkozás emlékeztető</string>
    <string name="occupation_reminder_description">Értesítés negyed órával a foglalkozások előtt</string>
    <string name="room_order">Szobarend</string>
    <string name="commendation_warning">Dícséret/Figyelmeztetés</string>
    <string name="news">Hírek</string>
    <string name="appearance">Megjelenítés</string>
    <string name="colors">Színek</string>
    <string name="student_hostel">Kollégium</string>
    <string name="website">Weboldal</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="development_team">Fejlesztő csapat</string>
    <string name="team_name" translatable="false">Norbert©</string>
    <string name="email" translatable="false">Email</string>
    <string name="version" translatable="false">v0.0.1</string>
    <string name="sleeping">Alvás</string>
    <string name="out_in">Kint/Bent</string>
    <string name="in_">Be</string>
    <string name="doing_things">Szabad elfoglaltság</string>
    <string name="open_ediary">E-Napló megnyitása</string>
    <string name="monday">Hétfő</string>
    <string name="tuesday">Kedd</string>
    <string name="wednesday">Szerda</string>
    <string name="thursday">Csütörtök</string>
    <string name="friday">Péntek</string>
    <string name="saturday">Szombat</string>
    <string name="january">Január</string>
    <string name="february">Február</string>
    <string name="march">Március</string>
    <string name="april">Április</string>
    <string name="may">Május</string>
    <string name="june">Június</string>
    <string name="july">Július</string>
    <string name="august">Augusztus</string>
    <string name="september">Szeptember</string>
    <string name="october">Október</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="now">Most</string>
    <string name="silence_warning">Szilencium van, maradj csöndben!</string>
    <string name="title">Cím</string>
    <string name="description">Leírás</string>
    <string name="icon">Ikon</string>
    <string name="today">Ma</string>
    <string name="go_out_text">%1$s-ig még kimehetsz</string>
    <string name="stay_out_text">%1$s-ig kint maradhatsz</string>
    <string name="will_remain">Lesz %1$svisszaérni</string>
    <string name="now_remain">Van még %1$svisszaérni</string>
    <string name="praises">Dicséretek</string>
    <string name="warnings">Figyelmeztetők</string>
    <string name="students">Diákok</string>
    <string name="teachers">Tanárok</string>
    <string name="rooms">Szobák</string>
    <string name="classrooms">Termek</string>
    <string name="lorem_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae dolor nec metus tempus maximus. Vestibulum egestas dictum hendrerit. Pellentesque tellus enim, tempor id quam nec, fringilla gravida velit. Aenean luctus eros eu mi posuere rhoncus. Quisque quis quam augue. Morbi venenatis, libero quis gravida ornare, felis nunc efficitur felis, eu egestas eros sem ac purus. Phasellus ullamcorper ante dolor, sed pretium purus ultrices non. Quisque gravida laoreet finibus. Aenean convallis orci eu nibh faucibus dictum volutpat at felis. Donec vestibulum pulvinar justo, at vehicula enim egestas vel. Sed lectus nulla, ultrices sed sodales rhoncus, suscipit scelerisque ante.  Nulla bibendum dictum massa vel accumsan. Mauris tempor iaculis neque, vel vehicula sem ullamcorper sit amet. Ut luctus mi nunc, ac blandit justo dignissim eu. Etiam a purus a tortor luctus congue. In nec fringilla enim. Vestibulum facilisis nisl in mi venenatis varius quis ut tortor. Nullam pretium laoreet neque at condimentum.  Aliquam viverra massa sed sapien accumsan, id iaculis dolor eleifend. Etiam ex tellus, lobortis ac eros quis, dignissim auctor risus. Cras ligula ligula, bibendum vel lectus quis, posuere ultrices metus. Vivamus lobortis tempus metus, et sagittis justo convallis vel. Aenean id arcu in metus rhoncus molestie. Vestibulum cursus quis diam ac dictum. Nam ut nulla quam. Praesent molestie magna massa, at pharetra purus hendrerit at. Maecenas lobortis volutpat magna nec blandit. Donec elit urna, faucibus laoreet cursus vel, feugiat quis elit.</string>
    <string name="windows">Ablakok</string>
    <string name="beds">Ágyak</string>
    <string name="power_cut">Áramtalanítás</string>
    <string name="table">Asztal</string>
    <string name="fridge">Hűtő</string>
    <string name="bin">Kuka</string>
    <string name="air">Levegő</string>
    <string name="unwashed">Mosatlan</string>
    <string name="floor">Padló</string>
    <string name="shelves">Polcok</string>
    <string name="order">Rend</string>
    <string name="home">Kezdőképernyő</string>
    <string name="calendar">Naptár</string>
    <string name="absence">Késések</string>
    <string name="everyone">Mindenki</string>
    <string name="appdu_description" translatable="false">appdu_description</string>
    <string name="service_description" translatable="false">service_description</string>
    <string name="ok">Okés</string>
    <string name="nfc_success">Sikeres belépés!</string>
    <string name="expand">Több</string>
    <string name="successfull_exit">Sikeres kilépés!</string>
    <string name="education_ID_colon">Oktatási azonosító:</string>
    <string name="education_teacher">Nevelő tanár:</string>
    <string name="school">Iskola:</string>
    <string name="class_colon">Osztály:</string>
    <string name="born_date_colon">Születési idő:</string>
    <string name="born_place_colon">Születési hely:</string>
    <string name="mothers_name">Anyja neve:</string>
    <string name="mothers_phone_number_colon">Anyja telefonszáma:</string>
    <string name="accurate_address_colon">Pontos lakcím:</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="users">Emberek</string>
    <string name="sunday">Vasárnap</string>
    <string name="no_account_yet">Nincs fiókom</string>
    <string name="report">Jelentés</string>
    <string name="report_desc">A felhasználó szabályokat szeg</string>
    <string name="online_connections">Online elérhetőségek</string>
    <string name="manage_student">Diák kezelése</string>
    <string name="discord" translatable="false">Discord</string>
    <string name="lorem_medium" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae dolor nec metus tempus maximus. Vestibulum egestas dictum hendrerit. Pellentesque tellus enim, tempor id quam nec, fringilla gravida velit. Aenean luctus eros eu mi posuere rhoncus. Quisque quis quam augue. Morbi venenatis, libero quis gravida ornare, felis nunc efficitur felis, eu egestas eros sem ac purus. Phasellus ullamcorper ante dolor, sed pretium purus ultrices non. Quisque gravida laoreet finibus. Aenean convallis orci eu nibh faucibus dictum volutpat at felis. Donec vestibulum pulvinar justo, at vehicula enim egestas vel. Sed lectus nulla, ultrices sed sodales rhoncus, suscipit scelerisque ante.  Nulla bibendum dictum massa vel accumsan. Mauris tempor iaculis neque, vel vehicula sem ullamcorper sit amet. Ut luctus mi nunc, ac blandit justo dignissim eu. Etiam a purus a tortor luctus congue. In nec fringilla enim. Vestibulum facilisis nisl in mi venenatis varius quis ut tortor. Nullam pretium laoreet neque at condimentum.</string>
    <string name="like">Tetszik</string>
    <string name="add_calendar">Rögzítés naptárban</string>
    <string name="write_comment">Írj hozzászólást</string>
    <string name="lorem_short" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="i_will_be_there">Ott leszek</string>
    <string name="welcome">Helló!</string>
    <string name="you_are_new_here">Úgy tűnik új vagy a rendszerben.</string>
    <string name="start">Kezdés</string>
    <string name="back">Vissza</string>
    <string name="next">Következő</string>
    <string name="test123">Ország<font color="#01C6DB">*</font></string>
    <string name="country">Ország</string>
    <string name="required">Kötelező</string>
    <string name="optional">Opcionális</string>
    <string name="too_low_char_id" translatable="false">Kevesebb mint 11 számot írtál be!</string>
    <string name="too_much_char_id" translatable="false">Több mint 11 számot írtál be!</string>
    <string name="invalid_id">Érvénytelen oktatási azonosító!</string>
    <string name="backward">Előző</string>
    <string name="finnish">Befejezés</string>
    <string name="date">Dátum</string>
    <string name="filters">Szűrők</string>
    <string name="arrangement">Rendezés</string>
    <string name="oldest">Legrégebbi</string>
    <string name="newest">Legújabb</string>
    <string name="user_outgoings">Kimenők</string>
    <string name="settings">Beállítások</string>
    <string name="privacy_policy">Adatvédelmi irányelvek</string>
    <string name="manage_account">Fiók kezelése</string>
    <string name="places">Helyiségek</string>
    <string name="search">Keresés</string>
    <string name="posts">Bejegyzések</string>
    <string name="from_student">Tanulótól</string>
    <string name="from_teacher">Tanártól</string>
    <string name="search_everywhere">Keresés mindenhol</string>
    <string name="hour">óra</string>
    <string name="minute">perced</string>
    <string name="hour_inflected">órád</string>
    <string name="hours">óra</string>
    <string name="minutes_infelcted">perced</string>
    <string name="floor_level">Emelet</string>
    <string name="from_up">Fentről</string>
    <string name="from_down">Lentről</string>
    <string name="state">Állapot</string>
    <string name="user">Felhasználó</string>
    <string name="place_room">Helyiség</string>
    <string name="teacher">Tanár</string>
    <string name="group">Csoport</string>
    <string name="class_">Osztály</string>
    <string name="bug_report">Hibajelentés</string>
    <string name="suggestion">Javaslat</string>
    <string name="tutoring">Korrepetálás</string>
    <string name="support_us">Támogass minket</string>
    <string name="room">Szoba</string>
    <string name="lesson">Óra</string>
    <string name="classroom">Terem</string>
</resources>