<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/main_navigation"
    android:label="main"
    app:startDestination="@id/home">

    <fragment
        android:id="@id/notifications"
        android:name="com.example.shared.fragments.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@id/calendar"
        android:name="com.example.teacher.fragments.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" />
    <navigation
        android:id="@id/studentHostel"
        android:label="@string/student_hostel"
        app:startDestination="@id/studentHostelFragment">
        <fragment
            android:id="@+id/roomRateFragment"
            android:name="com.example.teacher.fragments.RoomRateFragment"
            android:label="fragment_room_rate"
            tools:layout="@layout/fragment_room_rate" />
        <fragment
            android:id="@id/studentHostelFragment"
            android:name="com.example.shared.fragments.StudentHostelFragment"
            android:label="@string/student_hostel"
            tools:layout="@layout/fragment_student_hostel"/>
        <fragment
            android:id="@id/roomsFragment"
            android:name="com.example.shared.fragments.RoomsFragment"
            android:label="@string/places"/>
        <fragment
            android:id="@id/usersFragment"
            android:name="com.example.shared.fragments.UsersFragment"
            android:label="@string/people"
            tools:layout="@layout/fragment_rooms"/>
        <fragment
            android:id="@id/userFragment"
            android:name="com.example.teacher.fragments.UserFragment"
            android:label="@string/user"/>
        <fragment
            android:id="@id/userOutgoingFragment"
            android:name="com.example.shared.fragments.UserOutgoingFragment"
            android:label="@string/outgoings"
            tools:layout="@layout/fragment_user_outgoing" />
        <fragment
            android:id="@id/userGateFragment"
            android:name="com.example.shared.fragments.UserGateFragment"
            android:label="@string/exits_and_entrances" />
        <fragment
            android:id="@id/roomFragment"
            android:name="com.example.teacher.fragments.RoomFragment"
            android:label="@string/room"
            tools:layout="@layout/fragment_room"/><action android:id="@id/action_global_roomRateFragment" app:destination="@id/roomRateFragment"/><action android:id="@id/action_global_userGateFragment" app:destination="@id/userGateFragment"/><action android:id="@id/action_global_userOutgoingFragment" app:destination="@id/userOutgoingFragment"/><action android:id="@id/action_global_userFragment" app:destination="@id/userFragment"/><action android:id="@id/action_global_roomFragment" app:destination="@id/roomFragment"/><action android:id="@id/action_global_roomsFragment" app:destination="@id/roomsFragment"/><action android:id="@id/action_global_usersFragment" app:destination="@id/usersFragment"/>
    </navigation>
    <navigation
        android:id="@id/home"
        android:label="@string/home"
        app:startDestination="@id/homeFragment">
        <fragment
            android:id="@id/homeFragment"
            android:name="com.example.teacher.fragments.HomeFragment"
            android:label="@string/home"
            tools:layout="@layout/fragment_home"/>
        <fragment
            android:id="@id/postsFragment"
            android:name="com.example.shared.fragments.PostsFragment"
            android:label="@string/posts"
            tools:layout="@layout/fragment_posts"/><action android:id="@id/action_global_postsFragment" app:destination="@id/postsFragment"/>
    </navigation>

</navigation>