<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:orientation="vertical"
    android:translationZ="100dp"
    tools:context=".fragments.UsersFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/tricky_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_container_margin"
                android:text="@string/filters" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip40"
                    style="@style/chipDropdownButtonFilterStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place_room"
                    app:closeIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip30"
                    style="@style/chipDropdownButtonFilterStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group"
                    app:closeIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip39"
                    style="@style/chipDropdownButtonFilterStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/floor_level"
                    app:closeIconEnabled="true" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/text_container_margin"
                android:text="@string/arrangement" />


            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checkedChip="@id/chip_none"
                app:chipSpacingHorizontal="0dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_down"
                    app:shapeAppearance="@style/overlayRoundedLeft" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_up"
                    app:shapeAppearance="@style/overlayRoundedRight" />

            </com.google.android.material.chip.ChipGroup>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="5dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.example.shared.SuperCoolRecyclerView
        android:id="@+id/super_cool_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>