<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView38"
        style="@style/CategoryCardName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/development_team" />

    <androidx.cardview.widget.CardView
        style="@style/MainCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false">

        <LinearLayout
            style="@style/MainCardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">


            <com.google.android.material.card.MaterialCardView
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_margin="0dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView40"
                        style="@style/Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_container_margin"
                        android:text="@string/team_name"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/n_panel_padding"
                        android:layout_marginRight="@dimen/n_panel_padding"
                        android:clipToPadding="false"
                        android:paddingHorizontal="@dimen/panel_padding"
                        tools:itemCount="1"
                        tools:listitem="@layout/view_dev" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.norbert.koller.shared.customview.SimpleCardButton
                android:id="@+id/profile_card_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon="@drawable/support_us"
                custom:text="@string/support_us" />

            <com.norbert.koller.shared.customview.SimpleCardButton
                android:id="@+id/profile_card_bug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                custom:icon="@drawable/bug"
                custom:text="@string/bug_report"
                tools:visibility="visible">

            </com.norbert.koller.shared.customview.SimpleCardButton>

            <com.norbert.koller.shared.customview.SimpleCardButton
                android:id="@+id/profile_card_idea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                custom:icon="@drawable/lamp"
                custom:text="@string/suggestion"
                tools:visibility="visible" />

            <com.norbert.koller.shared.customview.SimpleCardButton
                android:id="@+id/profile_fbtn_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon="@drawable/mail"
                custom:text="@string/email" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@id/text_version"
        style="@style/Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:minHeight="@dimen/panel_padding"
        android:text="@string/version"
        android:textAlignment="center" />
</LinearLayout>