<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    tools:context=".TutoringFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/tricky_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_container_margin"
                android:text="@string/filters" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip2"
                    style="@style/chipDropdownButtonFilterStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutoring"
                    app:closeIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip3"
                    style="@style/chipDropdownButtonFilterStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    app:closeIconEnabled="true" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/text_container_margin"
                android:text="@string/arrangement" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@id/chip20"
                app:chipSpacingHorizontal="0dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newest"
                    app:shapeAppearance="@style/overlayRoundedLeft" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oldest"
                    app:shapeAppearance="@style/overlayRoundedRight" />

            </com.google.android.material.chip.ChipGroup>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="5dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.example.shared.SuperCoolRecyclerView
        android:id="@+id/sc_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>